--- a/index.ipynb
+++ b/index.ipynb
@@ -35,18 +35,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State you null and alternative hypotheses\n"
+    "# State your null and alternative hypotheses\n",
+    "# Ho: The average time to rent a car = 60 seconds\n",
+    "# Ha: The average time to rent a car >= 60 seconds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0013498980316301035, 3.0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your solution here\n",
+    "import scipy.stats as stats\n",
+    "from math import sqrt\n",
+    "x_bar = 75 # sample mean \n",
+    "n = 36 # number of customers\n",
+    "sigma = 30 # sd of population\n",
+    "mu = 60 # Population mean \n",
     "\n",
+    "z = (x_bar - mu)/(sigma/sqrt(n))\n",
+    "p = 1 - stats.norm.cdf(z)\n",
     "\n",
+    "p, z\n",
     "# (p = 0.0013498980316301035, z = 3.0)"
    ]
   },
@@ -57,7 +79,8 @@
    "outputs": [],
    "source": [
     "# Interpret the results in terms of p-value obtained\n",
-    "\n"
+    "# The p value is less than the threshold (5%) so we reject the null hypothesis\n",
+    "# Conclude that the average time to rent a car is more than 60 seconds."
    ]
   },
   {
@@ -89,19 +112,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State your hypotheses \n"
+    "# State your hypotheses \n",
+    "# Ho: There is no increase in scores after the program \n",
+    "# Ha: There is an increase in scores (> 500) after the program"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.015386334783925482, 2.1599999999999997)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Give your solution here \n",
+    "import numpy as np\n",
+    "import math as math\n",
     "\n",
+    "scores = np.array([434, 694, 457, 534, 720, 400, 484, 478, 610, 641, 425, 636, 454,\n",
+    "514, 563, 370, 499, 640, 501, 625, 612, 471, 598, 509, 531])\n",
     "\n",
+    "x_bar2 = scores.mean() # sample mean \n",
+    "n2 = len(scores) # number of students\n",
+    "sigma2 = 100 # sd of population\n",
+    "mu2 = 500 # population mean \n",
     "\n",
+    "z2 = (x_bar2 - mu2)/(sigma2/math.sqrt(n))\n",
+    "p2 = 1 - stats.norm.cdf(z2)\n",
+    "\n",
+    "p2, z2\n",
     "# p = 0.03593031911292577, z = 1.8"
    ]
   },
@@ -111,7 +159,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n"
+    "# Interpret the results in terms of p-value obtained\n",
+    "# The p value is less than the threshold (5%) so we reject the null hypothesis\n",
+    "# Conclude that the prep program has a significant impact on the test results"
    ]
   },
   {
@@ -122,20 +172,13 @@
     "\n",
     "In this lesson, we conducted a couple of simple tests comparing sample and population means, in an attempt to reject our null hypotheses. This provides you with a strong foundation to move ahead with more advanced tests and approaches in statistics. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -147,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
